# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//flows/analysis:build_defs.bzl", "analyze_rtl_binary")

package(
    default_applicable_licenses = ["//:package_license"],
    default_visibility = ["//visibility:private"],
)

analyze_rtl_binary(
    name = "critical_path_sky130",
    analysis_script = "critical_path.tcl",
    constants = ["clock_port"],
    standard_cells = "@com_google_skywater_pdk_sky130_fd_sc_hd//:sky130_fd_sc_hd",
)

analyze_rtl_binary(
    name = "reg2reg_path_sky130",
    analysis_script = "reg2reg_path.tcl",
    constants = [
        "clock_port",
        "reg_start",
        "reg_end",
    ],
    standard_cells = "@com_google_skywater_pdk_sky130_fd_sc_hd//:sky130_fd_sc_hd",
)

analyze_rtl_binary(
    name = "pipeline_balance_sky130",
    analysis_script = "pipeline_balance.tcl",
    constants = ["clock_port"],
    standard_cells = "@com_google_skywater_pdk_sky130_fd_sc_hd//:sky130_fd_sc_hd",
)

analyze_rtl_binary(
    name = "critical_path_asap7",
    analysis_script = "critical_path.tcl",
    constants = ["clock_port"],
    standard_cells = "@org_theopenroadproject_asap7sc7p5t_28//:asap7-sc7p5t_rev28_rvt",
)

analyze_rtl_binary(
    name = "reg2reg_path_asap7",
    analysis_script = "reg2reg_path.tcl",
    constants = [
        "clock_port",
        "reg_start",
        "reg_end",
    ],
    standard_cells = "@org_theopenroadproject_asap7sc7p5t_28//:asap7-sc7p5t_rev28_rvt",
)

analyze_rtl_binary(
    name = "pipeline_balance_asap7",
    analysis_script = "pipeline_balance.tcl",
    constants = ["clock_port"],
    standard_cells = "@org_theopenroadproject_asap7sc7p5t_28//:asap7-sc7p5t_rev28_rvt",
)

analyze_rtl_binary(
    name = "characterize_sky130",
    analysis_script = "characterize.tcl",
    constants = [
        "clock_port",
        "clock_period_ps",
    ],
    outputs = ["metrics"],
    standard_cells = "@com_google_skywater_pdk_sky130_fd_sc_hd//:sky130_fd_sc_hd",
)

analyze_rtl_binary(
    name = "characterize_asap7",
    analysis_script = "characterize.tcl",
    constants = [
        "clock_port",
        "clock_period_ps",
    ],
    outputs = ["metrics"],
    standard_cells = "@org_theopenroadproject_asap7sc7p5t_28//:asap7-sc7p5t_rev28_rvt",
)
